Updated vault.html style

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -20,14 +20,12 @@ body {
 
 #container {
   padding: 0px 30px 50px 30px;
-  /* width: 600px; */
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
 
   border: 1px solid #FF851B;
   border-radius: 12px;
-  /* height: 350px; */
 }
 
 @media (min-width:1310px) {
@@ -46,8 +44,7 @@ body {
   -moz-border-radius: 4;
   border-radius: 4px;
   color: #FF4136;
-  /* font-size: 15px; */
-  font-weight: lighter;
+  font-size: 1em;
   background: #ffffff;
   padding: 10px 20px 10px 20px;
   border: solid #FF4136 1px;
@@ -64,7 +61,6 @@ body {
 input[type=password] {
   border: 1px solid #FF4136;
   border-radius: 4px;
-  /* width: 150px; */
   height:25px;
   padding: 5px;
   font-size:20px;
@@ -73,7 +69,6 @@ input[type=password] {
 input[type=file] {
   border: 1px solid #FF4136;
   border-radius: 4px;
-  /* width: 350px; */
   height: 25px;
   padding: 5px;
   font-size:14px;
