--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -44,7 +44,8 @@ body {
   -moz-border-radius: 4;
   border-radius: 4px;
   color: #FF4136;
-  font-size: 1em;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight:100;
   background: #ffffff;
   padding: 10px 20px 10px 20px;
   border: solid #FF4136 1px;
