--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -75,3 +75,8 @@ input[type=file] {
   font-size:14px;
 }
 
+#progress-summary li {
+  color: #FF4136;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight:100;
+}
