--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -40,6 +40,7 @@ body {
 }
 
 .btn {
+  float:left;
   -webkit-border-radius: 4;
   -moz-border-radius: 4;
   border-radius: 4px;
@@ -73,6 +74,7 @@ input[type=file] {
   height: 25px;
   padding: 5px;
   font-size:14px;
+  width: 220px;
 }
 
 #progress-summary li {
@@ -80,3 +82,31 @@ input[type=file] {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight:100;
 }
+
+/* Progress indicator */
+.progress {
+  position: relative;
+  float:left;
+  margin-left: 20px;
+  margin-top: 5px;
+  height: 50px;
+  width: 50px;
+}
+.progress .percent {
+  text-align: center;
+  font-size: 12px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight:100;
+  color: #FF4136;
+  position: absolute; 
+  line-height: 50px;
+  width: 100%;
+}
+.progress svg path {
+  fill: none;
+}
+.progress svg.progress-circle path {
+  stroke: #FF4136;
+  stroke-width: 1;
+}
+
