--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -68,6 +68,8 @@ input[type=password] {
   font-size:20px;
 }
 
+// File upload
+
 input[type=file] {
   border: 1px solid #FF4136;
   border-radius: 4px;
@@ -76,6 +78,22 @@ input[type=file] {
   font-size:14px;
   width: 220px;
 }
+
+/* File Drag-and-drop */
+#dropzone {
+  min-height: 100px;
+  border: 4px dashed #FF851B;
+  /* border: 6px dashed #FFDC00; */
+  /* border: 1px solid #FF4136; */
+  border-radius: 4px;
+  padding: 10px;
+}
+
+#dropzone.hover {
+  border: 4px dashed #FF4136;
+}
+
+// Progress reporting
 
 #progress-summary li {
   color: #FF4136;
