--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,11 @@ body {
   color: #333;
 }
 
+/* .col { */
+/*   margin-left: 10px; */
+/*   margin-right: 10px; */
+/* } */
+
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -18,24 +23,22 @@ body {
   color: #FF4136;
 }
 
+.outer {
+  padding: 80px 80px;
+}
+
 #container {
   padding: 0px 30px 50px 30px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
-
+  max-width: 750px;
   border: 1px solid #FF851B;
   border-radius: 12px;
 }
 
-@media (min-width:1310px) {
-  #container {
-    margin-top: 100px;
-  }
-}
 @media (max-width:870px) {
-  #container {
-    margin-top: 0px;
+  .outer {
+    padding: 25px 25px;
   }
 }
 
@@ -48,7 +51,7 @@ body {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight:100;
   background: #ffffff;
-  padding: 10px 20px 10px 20px;
+  font-size: 1.8em;
   border: solid #FF4136 1px;
   text-decoration: none;
 }
@@ -65,7 +68,7 @@ input[type=password] {
   border-radius: 4px;
   height:25px;
   padding: 5px;
-  font-size:20px;
+  font-size: 20px;
 }
 
 // File upload
