--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -85,7 +85,8 @@ input[type=file] {
 /* File Drag-and-drop */
 #dropzone {
   min-height: 100px;
-  border: 4px dashed #FF851B;
+  /* border: 4px dashed #FF851B; */
+  border: 1px solid #FF4136;
   border-radius: 4px;
   padding: 10px;
 }
