--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -66,7 +66,7 @@ body {
 input[type=password] {
   border: 1px solid #FF4136;
   border-radius: 4px;
-  height:25px;
+  /* height:25px; */
   padding: 5px;
   font-size: 20px;
 }
@@ -107,14 +107,14 @@ input[type=file] {
 .progress {
   position: relative;
   float:left;
-  margin-left: 20px;
-  margin-top: 5px;
-  height: 50px;
-  width: 50px;
+  margin-left: 10px;
+  height: 40px;
+  width: 40px;
 }
 .progress .percent {
+  margin-top: -5px;
   text-align: center;
-  font-size: 12px;
+  font-size: 11px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight:100;
   color: #FF4136;
