--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -33,7 +33,7 @@ body {
   padding: 80px 80px;
 }
 
-#mainContainer {
+.container {
   padding: 0px 30px 50px 30px;
   margin-left: auto;
   margin-right: auto;
