Fixed bug where dom from dropped files was still in output vault (which was a security concern), and fixed styling a bit in output files.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -25,6 +25,11 @@ body {
   margin-top: 12px;
 }
 
+.download-file {
+  font-size: 1em;
+  margin-top: 12px;
+}
+
 A{text-decoration:none}
 
 /* .col { */
