Added a helper message on the locked vault and changed the format of the hypervaultFormatVersion variable.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -176,6 +176,14 @@ input[type=file] {
   display: none;
 }
 
+#decrypt-helper-message {
+  min-height: 50px;
+  border: 1px solid #FF851B;
+  border-radius: 4px;
+  padding: 10px;
+  /*display: none;*/
+}
+
 /* Progress reporting */
 
 #encrypt-progress-summary li, #decrypt-progress-summary li {
