--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -125,6 +125,10 @@ input[type=password] {
   width: 100%;
 }
 
+#decrypt-button {
+  width: 100%;
+}
+
 #download-vault {
   width: 100%;
   display: none;
@@ -202,16 +206,21 @@ input[type=file] {
 }
 
 #decrypt-helper-message {
-  min-height: 50px;
-  border: 1px solid #FF851B;
-  border-radius: 4px;
-  padding: 10px;
+  /*min-height: 50px;*/
+  /*border: 1px solid #FF851B;*/
+  /*border-radius: 4px;*/
+  padding: 4px;
+  font-size: 1.2em;
   /*display: none;*/
 }
 
 /* Progress reporting */
 
 #encrypt-progress-summary {
+  text-align: left;
+}
+
+#decrypt-progress-summary {
   text-align: left;
 }
 
@@ -258,7 +267,7 @@ input[type=file] {
 }
 
 .footer {
-  margin-top: 0px;
+  margin-top: 10px;
   text-align: center;
   color: #AAAAAA;
   font-size: .8em;
