--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -129,6 +129,10 @@ input[type=password] {
   width: 100%;
 }
 
+#decrypt-password-input {
+  width: 220px;
+}
+
 #download-vault {
   width: 100%;
   display: none;
