--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -308,3 +308,17 @@ input[type=file] {
   color: #FF4136;
   margin: 8px 0px;
 }
+
+#download-hypervault-link {
+  color: #FF4136;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  margin-top: 10px;
+  position: fixed
+  right: 0;
+  top: 0;
+  width: 150px;
+}
+
+#download-hypervault-svg {
+}
