--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -153,6 +153,14 @@ input[type=password] {
   font-size: 1.3em;
 }
 
+.select-files-msg {
+  color: #FF4136;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  font-size: 1.3em;
+  text-align: center;
+}
+
 /* File upload */
 
 input[type=file] {
@@ -269,6 +277,7 @@ input[type=file] {
   display: none;
   color: #FF4136;
   font-size: .9em;
+  text-align: left;
 }
 
 .footer {
