--- a/app/styles/mincss-grid.css
+++ b/app/styles/mincss-grid.css
@@ -1,2 +1,70 @@
 /* Generated from Mincss download page (only the grid portion): http://mincss.com/download.html */
-body,textarea,input,select{background:0;border-radius:0;font:16px sans-serif;margin:0}.addon,.btn-sm,.nav,textarea,input,select{outline:0;font-size:14px}.smooth{transition:all .2s}.btn,.nav a{text-decoration:none}.container{margin:0 20px;width:auto}@media(min-width:1310px){.container{margin:auto;width:1270px}}.btn,h2{font-size:2em}.row{margin:1% 0;overflow:auto}.col{float:left}.table,.c12{width:100%}.c11{width:91.66%}.c10{width:83.33%}.c9{width:75%}.c8{width:66.66%}.c7{width:58.33%}.c6{width:50%}.c5{width:41.66%}.c4{width:33.33%}.c3{width:25%}.c2{width:16.66%}.c1{width:8.33%}@media(max-width:870px){.row .col{width:100%}}
+/* Modified by Caleb Madrigal */
+
+body,textarea,input,select {
+  background:0;
+  border-radius:0;
+  font:16px sans-serif;
+  margin:0
+}
+
+.addon,.btn-sm,.nav,textarea,input,select {
+  outline:0;
+  font-size:14px
+}
+
+.smooth{transition:all .2s}
+.btn,.nav a {
+  text-decoration:none
+}
+
+.container {
+  margin:0 20px;
+  width:auto
+}
+
+@media(min-width:1310px) {
+  .container {
+    margin:auto;
+    width:1270px
+  }
+}
+
+.btn,h2 {
+  font-size:2em
+}
+
+.row {
+  margin:1% 0;
+  overflow:auto
+}
+
+.col {
+  float:left
+}
+
+.col-no-collapse {
+  float:left
+}
+
+.table,.c12 {
+  width:100%
+}
+
+.c11{width:91.66%}
+.c10{width:83.33%}
+.c9{width:75%}
+.c8{width:66.66%}
+.c7{width:58.33%}
+.c6{width:50%}
+.c5{width:41.66%}
+.c4{width:33.33%}
+.c3{width:25%}
+.c2{width:16.66%}
+.c1{width:8.33%}
+
+@media(max-width:870px) {
+  .row .col {
+    width:100%
+  }
+}
