Minor text tweak

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -73,7 +73,7 @@ A{text-decoration:none}
 }
 
 .intro-text {
-  color: #FF4136;
+  color: #FF851B;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight: 100;
   margin-top: 40px;
