--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -73,10 +73,25 @@ A{text-decoration:none}
 }
 
 .intro-text {
-  color: #FF851B;
+  color: #888888;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-weight: 100;
   margin-top: 40px;
+}
+
+.choose-password-msg {
+  color: #FF4136;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  font-size: 1.3em;
+}
+
+.select-files-msg {
+  color: #FF4136;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 100;
+  font-size: 1.3em;
+  text-align: center;
 }
 
 .outer {
@@ -157,21 +172,6 @@ input[type=password] {
   margin-top: 4px;
 }
 
-.choose-password-msg {
-  color: #FF4136;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  font-size: 1.3em;
-}
-
-.select-files-msg {
-  color: #FF4136;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  font-size: 1.3em;
-  text-align: center;
-}
-
 /* File upload */
 
 input[type=file] {
@@ -182,7 +182,6 @@ input[type=file] {
   font-size:14px;
   width: 220px;
 }
-
 
 /* File Drag-and-drop */
 #dropzone {
