Changed links to public urls.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -29,7 +29,7 @@
 
     <div class="row">
       <div class="col c5">
-        <h1 class="title"><a href="index.html">Hypervault</a></h1>
+        <h1 class="title"><a href="https://hypervault.github.io/">Hypervault</a></h1>
       </div>
 
       <div class="col c7">
@@ -114,7 +114,7 @@
 
     <div class="row">
       <div class="col c12">
-        <h1 class="title">Hypervault</h1>
+        <h1 class="title"><a href="https://hypervault.github.io">Hypervault</a></h1>
       </div>
     </div>
 
@@ -174,9 +174,9 @@
 <div class="footer">
   <div class="footer-container">
       <span>
-        <a href="index.html">Home</a> |
-        <a href="https://github.com/hypervault">Github</a> |
-        <a href="about.html">FAQ</a>
+        <a href="https://hypervault.github.io/">Home</a> |
+        <a href="https://github.com/hypervault/hypervault.github.io">Github</a> |
+        <a href="https://hypervault.github.io/about.html">FAQ</a>
       </span>
     <hr />
     <span>Project by <a href="http://calebmadrigal.com">Caleb Madrigal</a></span>
