Added note about supported browsers

--- a/src/app/about.html
+++ b/src/app/about.html
@@ -43,6 +43,13 @@
           <li>Hypervault outputs another single .html file which contains both the encrypted file data, and a copy of itself.</li>
         </ul>
 
+        <h1>Supported browsers?</h1>
+        <ul>
+          <li>It seems to work in most modern desktop browsers</li>
+          <li>iOS support is coming soon</li>
+          <li>Android is not yet tested</li>
+        </ul>
+
         <h1>How do I use Hypervault?</h1>
         <ol>
           <li>Drag files you want to encrypt into it</li>
