--- a/src/app/about.html
+++ b/src/app/about.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="/favicon.png">
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/jsonlylightbox/css/lightbox.css" />
   <!-- endbower -->
   <!-- endbuild -->
 
