--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="/favicon.png">
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/jsonlylightbox/css/lightbox.css" />
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -190,6 +191,7 @@
 <!-- bower:js -->
 <script src="bower_components/FileSaver/FileSaver.js"></script>
 <script src="bower_components/triplesec/browser/triplesec.js"></script>
+<script src="bower_components/jsonlylightbox/js/lightbox.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
