Insert text now working. Text files can't yet be viewed in the app.

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -224,8 +224,8 @@
     </div>
 
     <div class="modal-button-panel">
-      <button id="modal-editor-cancel" class="btn" onclick="alert('cancel');return false;">Cancel</button>
-      <button id="modal-editor-save" class="btn" onclick="alert('hit');return false;">Insert text</button>
+      <button id="modal-editor-cancel" class="btn" onclick="hideModalEditor();return false;">Cancel</button>
+      <button id="modal-editor-save" class="btn" onclick="addInsertedText(); return false;">Insert text</button>
     </div>
 
     <div style="clear: both;"></div>
