Fixed merge conflicts

--- a/src/app/about.html
+++ b/src/app/about.html
@@ -39,9 +39,14 @@
       <div class="col c12 help-text">
         <h1>What is Hypervault?</h1>
         <ul>
-          <li>Hypervault is a file encryption app.</li>
+          <li>Hypervault is a file encryption app meant to provide data-at-rest encryption.</li>
           <li>Hypervault is entirely contained in a single .html file. As such, you can save the Hypervault page, and you will have a complete working copy of Hypervault which you can run offline.</li>
           <li>Hypervault outputs another single .html file which contains both the encrypted file data, and a copy of itself.</li>
+        </ul>
+
+        <h1>What Hypervault is NOT?</h1>
+        <ul>
+          <li>Hypervault does NOT provide data-in-transit security. So if you want to transfer a Hypervault, make sure you transfer it over a secured mechanism (like SSL-encrypted email).</li>
         </ul>
 
         <h1>Supported browsers?</h1>
@@ -56,6 +61,7 @@
           <li>Drag files you want to encrypt into it</li>
           <li>Choose a password with which to lock the hypervault (encrypt the files).</li>
           <li>Click "Lock vault"</li>
+          <li>A "locked hypervault" will download to your computer containing your encrypted file data. This can be stored
         </ol>
 
         <h1>What is a locked vault?</h1>
